--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -26,23 +26,52 @@ opengraph_image:
 		        <div class="align-bottom relative-xs text-center hidden-xs hidden-sm">
 		            <a class="icon-scroll icon no-color smooth-scroll" href="#description"></a>
 		        </div>
-		    </section><section id="description">
+		    </section>
+				<div id='description'></div>
+				{% for descr in content.descriptions %}
+				{% assign loopindex= forloop.index | modulo : 2 %}
+				{% if loopindex == 1 %}
+
+				<section id="{{descr.title}}">
 		        <div  class="container">
 		            <div class="row v-align-children">
 		                <div class="col-md-4 col-sm-5 mb-xs-24">
-		                    <h3>{{content.description.title}}</h3>
+		                    <h3>{{descr.title}}</h3>
 		                    <p>
-		                        {{content.description.body | markdownify}}
+		                        {{descr.body | markdownify}}
 		                    </p>
 		                </div>
 		                <div class="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 text-center">
-		                    <img class="cast-shadow .img-responsive" alt="Screenshot" src="{{imgs.description}}">
+		                    <img class="cast-shadow .img-responsive" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
 		                </div>
 		            </div>
 
 		        </div>
 
-		    </section><section id="features" class="image-bg overlay parallax">
+		    </section>
+				{% else %}
+				<section>
+		        <div class="container">
+		            <div class="row v-align-children">
+		                <div class="col-md-7 col-sm-6 text-center mb-xs-24">
+		                    <img class="cast-shadow" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
+		                </div>
+		                <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1">
+		                    <h3>{{descr.title}}</h3>
+		                    <p>
+		                        {{descr.body | markdownify}}
+		                    </p>
+		                </div>
+		            </div>
+
+		        </div>
+
+		    </section>
+			{% endif %}
+			{% endfor %}
+
+
+				<section id="features" class="image-bg overlay parallax">
 		        <div class="background-image-holder">
 		            <img alt="Background" class="background-image" src="{{imgs.features}}">
 		        </div>
@@ -88,31 +117,34 @@ opengraph_image:
 		        </div>
 
 		    </section>
-				<section id='protocols'> 
+				<section id='protocols'>
 		        <div class="container">
 							<div class='row'>
 								<div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
 									<h4 class="uppercase mb80">{{content.protocols.title}}</h4>
-		            	<div class="row v-align-children  group">
 										{% for protocol in content.protocols.blocks %}
+										{% assign loopindex= forloop.index | modulo: 3 %}
+										{% if loopindex==1 %}
+										<div class="row ">
+										{% endif %}
 	                        <div class="col-md-4 col-sm-4 modal-container align-bottom">
-															<a href='#' modal-link="{{forloop.index}}" class='btn-modal'>
+															<a href='#' modal-link="{{loopindex}}" class='btn-modal'>
 		                            <div class='img-wrapper img-md' style='background-image:url("{{protocol.logo}}")'>
 																</div>
 															</a>
-															<span class='color-primary'>{{protocol.name}}</span>											
-														<div class="foundry_modal">
+															<span class='color-primary'>{{protocol.name}}</span>
+														<div class="foundry_modal primary-link">
 	                          	{{protocol.description | markdownify}}
 	                      		</div>
-	                        </div>		                      
+	                        </div>
+													{% if loopindex==0 %}
+												</div>
+													{% endif %}
 										{% endfor %}
-									</div>  
+									</div>
 									</div>
             	</div>
 						</div>
-
-		        </div>
-
 		    </section>
 
 
