--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -42,7 +42,7 @@ opengraph_image:
 		                    </p>
 		                </div>
 		                <div class="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 text-center">
-		                    <img class="cast-shadow .img-responsive" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
+		                    <img class=".img-responsive" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
 		                </div>
 		            </div>
 
@@ -54,7 +54,7 @@ opengraph_image:
 		        <div class="container">
 		            <div class="row v-align-children">
 		                <div class="col-md-7 col-sm-6 text-center mb-xs-24">
-		                    <img class="cast-shadow" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
+		                    <img class=".img-responsive" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
 		                </div>
 		                <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1">
 		                    <h3>{{descr.title}}</h3>
