--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -27,7 +27,9 @@ opengraph_image:
 		            <a class="icon-scroll icon no-color smooth-scroll" href="#description"></a>
 		        </div>
 		    </section>
-				<div id='description'></div>
+				<div id='description' class='text-center row'>
+				<h2 class="uppercase mt40">{{content.catchphrase | markdownify }}</h2>
+				</div>
 				{% for descr in content.descriptions %}
 				{% assign loopindex= forloop.index | modulo : 2 %}
 				{% if loopindex == 1 %}
@@ -35,13 +37,13 @@ opengraph_image:
 				<section id="{{descr.title}}">
 		        <div  class="container">
 		            <div class="row v-align-children">
-		                <div class="col-md-4 col-sm-5 mb-xs-24">
+		                <div class="col-md-6 col-sm-5 mb-xs-24">
 		                    <h3>{{descr.title}}</h3>
 		                    <p>
 		                        {{descr.body | markdownify}}
 		                    </p>
 		                </div>
-		                <div class="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 text-center">
+		                <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-1 text-center">
 		                    <img class=".img-responsive" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
 		                </div>
 		            </div>
@@ -53,10 +55,10 @@ opengraph_image:
 				<section>
 		        <div class="container">
 		            <div class="row v-align-children">
-		                <div class="col-md-7 col-sm-6 text-center mb-xs-24">
+		                <div class="col-md-5 col-sm-6 text-center mb-xs-24">
 		                    <img class=".img-responsive" alt="{{forloop.index}}" src="{{imgs.description[forloop.index0]}}">
 		                </div>
-		                <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1">
+		                <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
 		                    <h3>{{descr.title}}</h3>
 		                    <p>
 		                        {{descr.body | markdownify}}
