added image to yaml

--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -137,7 +137,7 @@ opengraph_image:
 		    </section>
 					<section class="image-bg overlay">
 		            <div class="background-image-holder">
-		                <img alt="image" class="background-image" src="{{imgs.header}}">
+		                <img alt="image" class="background-image" src="{{imgs.crm}}">
 		            </div>
 								<div class="container">
 									<div class='row'>
