--- a/Websites/fermiumlabs_com/products/logger.html
+++ b/Websites/fermiumlabs_com/products/logger.html
@@ -9,7 +9,7 @@ opengraph_image:
 {% assign imgs = logger.imgs %}
 {% assign content = logger.content %}
 		<div class="main-container">
-		<section class="bg-primary pb0">
+		<section class="bg-logger pb0">
 		        <div class="container pt80">
 		            <div class="row mb24 mb-xs-0">
 		                <div class="col-sm-10 col-sm-offset-1 text-center">
@@ -42,7 +42,7 @@ opengraph_image:
 		            </div>
 		        </div>
 		        
-		    </section><section class="bg-primary">
+		    </section><section class="bg-logger">
 		        <div class="container">
 		            <div class="row mb48 mb-xs-24">
 		                <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 text-center">
@@ -51,7 +51,7 @@ opengraph_image:
 		            </div>
 		            
 		            <div class="row mb40 mb-xs-24">
-		                <div class="col-sm-6 col-sm-offset-3">
+		                <div class="col-sm-6 col-sm-offset-3" id='download'>
 								<script type="text/javascript" src="//crm.fermiumlabs.com/form/generate.js?id=4"></script>
 		                </div>
 		            </div>		            
