added temporary content to nnglogger page

--- a/Websites/fermiumlabs_com/products/logger.html
+++ b/Websites/fermiumlabs_com/products/logger.html
@@ -59,7 +59,7 @@ opengraph_image:
 		        
 		    </section><section>
 		        <div class="container">
-		            <div class="row">
+		            <div class="row is-flex">
 						{% for feature in content.features.blocks %}
 		                <div class="col-sm-6">
 		                    <div class="feature feature-1 boxed">
