--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -87,7 +87,7 @@ opengraph_image:
 		                </div>
 		            </div>
 
-		            <div class="row">
+		            <div class="row is-flex">
 								{% for feature in content.features.blocks %}
 		                <div class="col-sm-4">
 		                    <div class="feature feature-1 boxed">
