--- a/Websites/fermiumlabs_com/products/logger.html
+++ b/Websites/fermiumlabs_com/products/logger.html
@@ -37,6 +37,7 @@ opengraph_image:
 														<span class="input__label-content input__label-content--kaede"> <i class="fa fa-download" aria-hidden="true"></i> Download</span>
 													</label>
 												</div>
+												<!--<input id="mauticform_input_nngdownload_os" name="mauticform[os]" value={navigator.platform} class="mauticform-hidden" type="hidden" />-->
 												
 													<span class="mauticform-errormsg" style="display: none;"></span>
 	
